--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ body, html {
   <label for="langSelect">Idioma / Language:</label>
   <select id="langSelect">
     <option value="en">English</option>
-    <option value="es">EspaÃ±ol</option>
+    <option value="es">Español</option>
   </select>
   <button onclick="saveLanguage()">Guardar / Save</button>
 </div>
