--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ body, html {
 </div>
 
 <!-- Noticias -->
-<div class="news-bell" onclick="toggleNews()">ðŸ””</div>
+<div class="news-bell" onclick="toggleNews()">🔔</div>
 <div class="news-popup" id="newsPopup">
   <div id="newsList"></div>
 </div>
