--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ body, html {
 </div>
 
 <!-- Ajustes -->
-<div class="settings-gear" onclick="toggleSettings()">âš™ï¸</div>
+<div class="settings-gear" onclick="toggleSettings()">⚙️</div>
 <div class="settings-popup" id="settingsPopup">
   <label for="langSelect">Idioma / Language:</label>
   <select id="langSelect">
